[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "cookie"] }
chrono = "0.4.31"
futures = "0.3.29"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
